S3 support for resource pool.
Now we can specify s3 bucket in cloud_controller.yml like this:

  directories:
    droplets: /var/vcap/shared/droplets
    resources: "s3://{access_key_id}:{your_secret_access_key}@{bucket_name}.s3.amazon.com/{path}"

--- a/cloud_controller/Gemfile
+++ b/cloud_controller/Gemfile
@@ -50,6 +50,9 @@ gem 'SystemTimer', '~> 1.2', :platforms => :mri_18
 gem 'uuidtools', '~> 2.1.2'
 gem 'rest-client', '~> 1.6.7'
 
+# S3 support for shared resources
+gem 'aws-s3'
+
 # rspec-rails is outside the 'test' group in order to consistently provide Rake tasks.
 gem 'rspec-rails', '>= 2.4.1'
 group :test do
